--- a/report.qmd
+++ b/report.qmd
@@ -11,6 +11,10 @@ format: html
 
 ## Data description
 
+Below is the code to download the raw data directly from the Atlas of Living Australia.
+
+The basis of record was filtered to "human observations" only. This decision was made because we intended to focus solely on sightings of the species in the wild, rather than any specimens that were preserved or in controlled environments. The other options, such as "living specimen," could imply captivity or control, "preserved" typically refers to non-living specimens, and "occurrence" is too general to confirm its wild state.
+
 ```{r species-data, message=FALSE}
 library(kableExtra)
 library(galah)
@@ -76,8 +80,8 @@ kable(data, format = "markdown")
 ```{r species-data-cleaning}
 weeping_mulla_mulla <- rawdata %>%
   select(decimalLongitude, decimalLatitude, eventDate) %>%
-  rename(Longitude = decimalLongitude,
-         Latitude = decimalLatitude) %>%
+  rename(longitude = decimalLongitude,
+         latitude = decimalLatitude) %>%
   mutate(
     eventDate = as.Date(eventDate),
     Year = lubridate::year(eventDate),
@@ -86,7 +90,7 @@ weeping_mulla_mulla <- rawdata %>%
     Day = lubridate::day(eventDate)
   ) %>%
   filter(!is.na(eventDate)) %>%
-  filter(!is.na(Longitude))
+  filter(!is.na(longitude))
 save(weeping_mulla_mulla, file = ("data/weeping_mulla_mulla.rda"))
 ```
 
@@ -94,7 +98,7 @@ save(weeping_mulla_mulla, file = ("data/weeping_mulla_mulla.rda"))
 library(rnoaa)
 aus_stations <- ghcnd_stations() |>
   filter(str_starts(id, "ASN")) |>
-  filter(last_year >= 2020) |>
+  filter(last_year >= 2020) |> 
   mutate(wmo_id = as.numeric(wmo_id),
          name = str_to_lower(name)) |>
   select(-state, -gsn_flag) |>
@@ -123,18 +127,16 @@ narrogin <- aus_stations |>
 
 ```{r}
 data(world, package = "spData")
-australia <- world[world$iso_a2 == "AU",]
+australia <- world[world$iso_a2 == "AU", ]
 
 australia_plot <- ggplot(australia) + geom_sf(fill = "#5b9b2e")
 
 combined_plot <- australia_plot +
-  geom_point(
-    data = weeping_mulla_mulla,
-    aes(x = Longitude, y = Latitude),
-     colour = "#c599b2", 
-) +
-  labs(title = "Weeping Mulla Mulla Sightings Across Australia") +
-  theme_minimal() 
+  geom_point(data = weeping_mulla_mulla,
+             aes(x = longitude, y = latitude),
+             colour = "#c599b2",) +
+  labs(title = "Weeping Mulla Mulla Sightings Across Australia", x = "Longitude", y = "Latitude") +
+  theme_minimal()
 
 combined_plot
 ```
